# sensorUpload-esp32

./: README.md  partitons-16MiB.csv
components/BSP/: CMakeLists.txt
components/BSP/DHT11/: dht11.c  dht11.h
components/BSP/LED/: led.c  led.h
components/BSP/MQ2/: mq2.c  mq2.h
components/BSP/OLED/: oled.c  oled.h  oledfont.h
components/BSP/WebConfig/: apcfg.html  webconfig.c  webconfig.h
main/: CMakeLists.txt  app_network.c  app_network.h  app_sensor.c  app_sensor.h  main.c
